[package]
authors = [
	"Noah Hüsser <yatekii@yatekii.ch>",
	"Connor Fitzgerald <connorwadefitzgerald@gmail.com>",
	"Steven Wittens <steven@acko.net>",
]
categories = ["gui", "graphics", "rendering", "rendering::graphics-api"]
description = "A wgpu render backend for imgui-rs."
documentation = "https://docs.rs/imgui-wgpu/"
edition = "2021"
homepage = "https://github.com/Yatekii/imgui-wgpu-rs"
keywords = ["gui", "graphics", "wgpu", "imgui"]
license = "MIT OR Apache-2.0"
name = "imgui-wgpu"
readme = "README.md"
repository = "https://github.com/Yatekii/imgui-wgpu-rs"
version = "0.27.0"

exclude = [".gitignore", ".github", "resources"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
replace = "[Unreleased](#unreleased)\n- [v{{version}}](#v{{version}})"
search = "\\[Unreleased\\]\\(#unreleased\\)"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
replace = "[v$1.$2.$3](#v$1$2$3)"
search = "\\[v([0-9]+)\\.([0-9]+)\\.([0-9]+)\\]\\(#v[0-9\\.]+\\)"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
replace = "## Unreleased\n\n## v{{version}}\n\nReleased {{date}}"
search = "## Unreleased"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
min = 0                                                                                                                                                                               # allow first increment
replace = "[Unreleased](https://github.com/Yatekii/imgui-wgpu-rs/compare/v{{version}}...HEAD)\n- [v{{version}}](https://github.com/Yatekii/imgui-wgpu-rs/compare/v$1...v{{version}})"
search = "\\[Unreleased\\]\\(https://github.com/Yatekii/imgui-wgpu-rs/compare/v([a-z0-9.-]+)\\.\\.\\.HEAD\\)"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
min = 0                                                                                          # allow non-first increment
replace = "- [Unreleased](https://github.com/Yatekii/imgui-wgpu-rs/compare/v{{version}}...HEAD)"
search = "<!-- Begin Diffs -->"

[dependencies]
bytemuck = "1"
imgui = "0.12"
log = "0.4"
smallvec = "1"
wgpu = { version = "27", default-features = false }

[dev-dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
imgui-winit-support = "0.13"
pollster = "0.4"
raw-window-handle = "0.6"
winit = "0.30"

[package.metadata.docs.rs]
all-features = true
